# rabbitvcs-dfm

./: .gitignore  CMakeLists.txt  README.md  SVN_checkout_vs_export.md  SVN_vs_Git_对比.md  move-so.sh
debian/: changelog  control  rules
src/: rabbitvcs-dfm-menu.cpp  rabbitvcsdfmemblems.cpp  rabbitvcsdfmemblems.h  rabbitvcsdfmmenuplugin.cpp  rabbitvcsdfmmenuplugin.h  rabbitvcsmenuhelper.cpp  rabbitvcsmenuhelper.h  statuschecker.cpp  statuschecker.h
